src/objects/Shop_Product_Order__c.object
<CustomObject>
    <fields>
        <fullName>Cost__c</fullName>
        <formula>Shop_Product__r.Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Shop_Order__c</fullName>
        <label>Shop Order</label>
        <referenceTo>Shop_Order__c</referenceTo>
        <relationshipLabel>Shop Product Orders</relationshipLabel>
        <relationshipName>Shop_Product_Orders</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Shop_Product__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Shop Product</label>
        <referenceTo>Shop_Product__c</referenceTo>
        <relationshipLabel>Shop Product Orders</relationshipLabel>
        <relationshipName>Shop_Product_Orders</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sum__c</fullName>
        <description>quantity * price</description>
        <label>Sum</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Cost__c</fullName>
        <formula>Quantity__c *  Shop_Product__r.Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Shop Product Order</label>
    <nameField>
        <label>Shop Product Order Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Shop Product Orders</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>